// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClaimPaper with ClaimBody 1`] = `
<div
  className="MuiPaper-root-177 MuiPaper-elevation1-180 MuiPaper-rounded-178 Component-root-175 Component-root-176 Component-root-174"
>
  <h5
    className="MuiTypography-root-206 MuiTypography-h5-215 MuiTypography-colorTextPrimary-231 MuiTypography-alignCenter-222 WithStyles(ForwardRef(Typography))-root-204 WithStyles(ForwardRef(Typography))-root-205"
  >
    This is a claim body
  </h5>
</div>
`;

exports[`Storyshots Claims Evidence 1`] = `
<div
  className="MuiPaper-root-414 MuiPaper-elevation0-416 MuiPaper-rounded-415 MuiExpansionPanel-root-410 MuiExpansionPanel-rounded-411 Component-root-409"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root-449 MuiExpansionPanelSummary-root-443 Component-root-441"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-447 Component-content-442"
    >
      <div
        className="MuiBox-root-452 MuiBox-root-453"
      >
        <div
          className="MuiBox-root-452 MuiBox-root-454"
          onClick={[Function]}
        >
          <button
            aria-haspopup="true"
            className="MuiButtonBase-root-449 MuiButton-root-459 MuiButton-text-461 WithStyles(ForwardRef(Button))-root-457 WithStyles(ForwardRef(Button))-root-458 Component-root-455 Component-root-456"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-460"
            >
              66
              %
            </span>
          </button>
        </div>
      </div>
      <div
        className="MuiBox-root-452 MuiBox-root-479"
      >
        <h6
          className="MuiTypography-root-482 MuiTypography-h6-492 WithStyles(ForwardRef(Typography))-root-480 WithStyles(ForwardRef(Typography))-root-481"
        >
          <a
            className="MuiTypography-root-482 MuiTypography-colorInherit-504 MuiLink-root-514 MuiLink-underlineHover-516 Component-root-512 Component-root-513"
            href="/somesay/this-is-another-claim"
            onClick={[Function]}
          >
            This is a claim that stretches the limits of this system. It has precisely 255 characters, the maximum number of characters that a claim can have and still be valid. Anything longer than this will be rejected by the system because it is too long. Goodbye.
          </a>
        </h6>
        <div
          className="MuiBox-root-452 MuiBox-root-519"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-449 MuiButton-root-459 MuiButton-text-461 WithStyles(ForwardRef(Button))-root-457 WithStyles(ForwardRef(Button))-root-520"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-460"
            >
              I agree
            </span>
          </button>
          <button
            className="MuiButtonBase-root-449 MuiButton-root-459 MuiButton-text-461 WithStyles(ForwardRef(Button))-root-457 WithStyles(ForwardRef(Button))-root-521"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-460"
            >
              I'm not sure
            </span>
          </button>
          <button
            className="MuiButtonBase-root-449 MuiButton-root-459 MuiButton-text-461 WithStyles(ForwardRef(Button))-root-457 WithStyles(ForwardRef(Button))-root-522"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-460"
            >
              I disagree
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      aria-disabled={false}
      aria-hidden="true"
      className="MuiButtonBase-root-449 MuiIconButton-root-523 MuiIconButton-edgeEnd-525 MuiExpansionPanelSummary-expandIcon-448"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-531"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-532"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container-541 MuiCollapse-hidden-543"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-544"
    >
      <div
        className="MuiCollapse-wrapperInner-545"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root-546"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims SupportList 1`] = `
<div
  className="MuiBox-root-341 MuiBox-root-342"
>
  <div
    className="MuiBox-root-341 MuiBox-root-343"
  >
    <h5
      className="MuiTypography-root-346 MuiTypography-h5-355 WithStyles(ForwardRef(Typography))-root-344 WithStyles(ForwardRef(Typography))-root-345"
    >
      because
    </h5>
    <div
      className="MuiBox-root-341 MuiBox-root-376"
    >
      <form
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="react-autowhatever-1"
          role="combobox"
          style={Object {}}
        >
          <div
            className="MuiInputBase-root-391 MuiInput-root-379 MuiInput-underline-383 MuiInputBase-fullWidth-400 MuiInput-fullWidth-386"
            field="body"
            onClick={[Function]}
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls="react-autowhatever-1"
              autoComplete="off"
              className="MuiInputBase-input-401 MuiInput-input-387"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="why?"
              style={Object {}}
              type="text"
              value=""
            />
          </div>
          <div
            id="react-autowhatever-1"
            role="listbox"
            style={Object {}}
          >
            
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims default 1`] = `
<div
  className="MuiGrid-root-238 MuiGrid-container-239 MuiGrid-spacing-xs-1-261 WithStyles(ForwardRef(Grid))-root-236 WithStyles(ForwardRef(Grid))-root-237"
/>
`;

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root-43 MuiPaper-elevation4-49 MuiAppBar-root-34 MuiAppBar-positionStatic-38 MuiAppBar-colorDefault-40"
  >
    <div
      className="MuiToolbar-root-72 MuiToolbar-regular-74 MuiToolbar-gutters-73 WithStyles(ForwardRef(Toolbar))-root-70 WithStyles(ForwardRef(Toolbar))-root-71"
    >
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-77"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-79"
        >
          <img
            alt="logo"
            className="Component-logo-98"
            src="logo.svg"
          />
        </span>
        <span
          className="MuiTouchRipple-root-164"
        />
      </button>
      <h6
        className="MuiTypography-root-105 MuiTypography-h6-115 WithStyles(ForwardRef(Typography))-root-103 WithStyles(ForwardRef(Typography))-root-104 Component-ohhey-33"
      >
        oh hey!
      </h6>
      <form
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <div
          className="MuiInputBase-root-147 MuiInput-root-135 MuiInput-underline-139"
          onClick={[Function]}
        >
          <input
            className="MuiInputBase-input-157 MuiInput-input-143"
            name="username"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="MuiInputBase-root-147 MuiInput-root-135 MuiInput-underline-139"
          onClick={[Function]}
        >
          <input
            className="MuiInputBase-input-157 MuiInput-input-143"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="password"
            value=""
          />
        </div>
        <button
          className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-163"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="submit"
        >
          <span
            className="MuiButton-label-79"
          >
            log in
          </span>
          <span
            className="MuiTouchRipple-root-164"
          />
        </button>
      </form>
    </div>
  </header>
</header>
`;

exports[`Storyshots UI components ClaimPaper 1`] = `
<div
  className="MuiPaper-root-6 MuiPaper-elevation1-9 MuiPaper-rounded-7 Component-root-4 Component-root-5 Component-root-3"
>
  This is some paper on which to write a claim.
</div>
`;

exports[`Storyshots UI components Spinner 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-1 Spinner-root-2 sk-chasing-dots"
>
  <div />
  <div />
</div>
`;

exports[`Storyshots UserClaim default 1`] = `
<div
  className="MuiPaper-root-560 MuiPaper-elevation1-563 MuiPaper-rounded-561 Component-root-558 Component-root-559 Component-root-557"
>
  <div
    className="MuiToolbar-root-589 MuiToolbar-regular-591 MuiToolbar-gutters-590 WithStyles(ForwardRef(Toolbar))-root-587 WithStyles(ForwardRef(Toolbar))-root-588"
  >
    <div
      className="MuiBox-root-593 MuiBox-root-594"
    >
      <button
        className="MuiButtonBase-root-615 MuiButton-root-598 MuiButton-text-600 WithStyles(ForwardRef(Button))-root-596 WithStyles(ForwardRef(Button))-root-597 Styled(WithStyles(ForwardRef(Button)))-root-595"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-599"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-618 MuiSvgIcon-fontSizeInherit-624"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 7h2v2h-2zM11 11h2v6h-2z"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
            />
          </svg>
        </span>
      </button>
      <span
        className="MuiTypography-root-643 MuiTypography-caption-646 MuiTypography-alignCenter-659 WithStyles(ForwardRef(Typography))-root-641 WithStyles(ForwardRef(Typography))-root-642"
      >
        100
      </span>
    </div>
    <div
      className="MuiBox-root-593 MuiBox-root-673"
    >
      <a
        className="MuiTypography-root-643 MuiTypography-colorInherit-665 MuiLink-root-676 MuiLink-underlineHover-678 Component-root-674 Component-root-675"
        href="/somesay/this-is-a-claim"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-618 MuiSvgIcon-fontSizeInherit-624"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
          />
        </svg>
      </a>
      <button
        className="MuiButtonBase-root-615 MuiButton-root-598 MuiButton-text-600 WithStyles(ForwardRef(Button))-root-596 WithStyles(ForwardRef(Button))-root-681 Styled(WithStyles(ForwardRef(Button)))-root-595"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-599"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-618 MuiSvgIcon-fontSizeInherit-624"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <h6
    className="MuiTypography-root-643 MuiTypography-subtitle1-654 MuiTypography-colorTextPrimary-668 MuiTypography-alignCenter-659 WithStyles(ForwardRef(Typography))-root-641 WithStyles(ForwardRef(Typography))-root-682"
  >
    @
    toby
     believes 
  </h6>
  <h5
    className="MuiTypography-root-643 MuiTypography-h5-652 MuiTypography-colorTextPrimary-668 MuiTypography-alignCenter-659 WithStyles(ForwardRef(Typography))-root-641 WithStyles(ForwardRef(Typography))-root-683"
  >
    <a
      className="MuiTypography-root-643 MuiTypography-colorInherit-665 MuiLink-root-676 MuiLink-underlineHover-678 Component-root-674 Component-root-684"
      href="/somesay/this-is-a-claim"
      onClick={[Function]}
    >
      This is a claim
    </a>
  </h5>
  <p
    className="MuiTypography-root-643 MuiTypography-body1-645 MuiTypography-alignCenter-659 WithStyles(ForwardRef(Typography))-root-641 WithStyles(ForwardRef(Typography))-root-685"
  >
    <button
      className="MuiButtonBase-root-615 MuiButton-root-598 MuiButton-text-600 WithStyles(ForwardRef(Button))-root-596 WithStyles(ForwardRef(Button))-root-686"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-599"
      >
        I agree
      </span>
    </button>
    <button
      className="MuiButtonBase-root-615 MuiButton-root-598 MuiButton-text-600 WithStyles(ForwardRef(Button))-root-596 WithStyles(ForwardRef(Button))-root-687"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-599"
      >
        I'm not sure
      </span>
    </button>
    <button
      className="MuiButtonBase-root-615 MuiButton-root-598 MuiButton-text-600 WithStyles(ForwardRef(Button))-root-596 WithStyles(ForwardRef(Button))-root-688"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-599"
      >
        I disagree
      </span>
    </button>
  </p>
  <div>
    
    
  </div>
</div>
`;
